bcb/mngview/libmng.hpp

//-- type declarations -------------------------------------------------------
typedef Cardinal mng_uint32;
typedef int mng_int32;
typedef Word mng_uint16;
typedef short mng_int16;
typedef Byte mng_uint8;
typedef Shortint mng_int8;
typedef bool mng_bool;
typedef void *mng_ptr;
typedef char *mng_pchar;
typedef void *mng_handle;
typedef int mng_retcode;
typedef Cardinal mng_chunkid;
enum mng_imgtype { mng_it_unknown, mng_it_png, mng_it_mng, mng_it_jng };
typedef void * __stdcall (*mng_memalloc)(Cardinal iLen);
typedef void __stdcall (*mng_memfree)(void * iPtr, Cardinal iLen);
typedef bool __stdcall (*mng_openstream)(void * hHandle);
typedef bool __stdcall (*mng_closestream)(void * hHandle);
typedef bool __stdcall (*mng_readdata)(void * hHandle, void * pBuf, Cardinal iBuflen, Cardinal &pRead
	);
typedef bool __stdcall (*mng_writedata)(void * hHandle, void * pBuf, Cardinal iBuflen, Cardinal &pWritten
	);
typedef bool __stdcall (*mng_errorproc)(void * hHandle, int iErrorcode, Byte iSeverity, Cardinal iChunkname
	, Cardinal iChunkseq, int iExtra1, int iExtra2, char * zErrortext);
typedef bool __stdcall (*mng_traceproc)(void * hHandle, int iFuncnr, Cardinal iFuncseq, char * zFuncname
	);
typedef bool __stdcall (*mng_processheader)(void * hHandle, Cardinal iWidth, Cardinal iHeight);
typedef bool __stdcall (*mng_processtext)(void * hHandle, Byte iType, char * zKeyword, char * zText, 
	char * zLanguage, char * zTranslation);
typedef void * __stdcall (*mng_getcanvasline)(void * hHandle, Cardinal iLinenr);
typedef void * __stdcall (*mng_getbkgdline)(void * hHandle, Cardinal iLinenr);
typedef bool __stdcall (*mng_refresh)(void * hHandle, Cardinal iX, Cardinal iY, Cardinal iWidth, Cardinal 
	iHeight);
typedef Cardinal __stdcall (*mng_gettickcount)(void * hHandle);
typedef bool __stdcall (*mng_settimer)(void * hHandle, Cardinal iMsecs);
typedef bool __stdcall (*mng_processgamma)(void * hHandle, Cardinal iGamma);
typedef bool __stdcall (*mng_processchroma)(void * hHandle, Cardinal iWhitex, Cardinal iWhitey, Cardinal 
	iRedx, Cardinal iRedy, Cardinal iGreenx, Cardinal iGreeny, Cardinal iBluex, Cardinal iBluey);
typedef bool __stdcall (*mng_processsrgb)(void * hHandle, Byte iIntent);
typedef bool __stdcall (*mng_processiccp)(void * hHandle, Cardinal iProfilesize, void * pProfile);
typedef bool __stdcall (*mng_processarow)(void * hHandle, Cardinal iRowsamples, bool bIsRGBA16, void * 
	pRow);
extern "C" void * __stdcall mng_initialize(void * pUserdata, mng_memalloc fMemalloc, mng_memfree fMemfree
	, mng_traceproc fTraceproc);
extern "C" int __stdcall mng_reset(void * hHandle);
extern "C" int __stdcall mng_cleanup(void * &hHandle);
extern "C" int __stdcall mng_read(void * hHandle);
extern "C" int __stdcall mng_write(void * hHandle);
extern "C" int __stdcall mng_create(void * hHandle);
extern "C" int __stdcall mng_readdisplay(void * hHandle);
extern "C" int __stdcall mng_display(void * hHandle);
extern "C" int __stdcall mng_display_resume(void * hHandle);
extern "C" int __stdcall mng_display_freeze(void * hHandle);
extern "C" int __stdcall mng_display_reset(void * hHandle);
extern "C" int __stdcall mng_display_goframe(void * hHandle, Cardinal iFramenr);
extern "C" int __stdcall mng_display_golayer(void * hHandle, Cardinal iLayernr);
extern "C" int __stdcall mng_display_gotime(void * hHandle, Cardinal iPlaytime);
extern "C" int __stdcall mng_getlasterror(void * hHandle, Byte &iSeverity, Cardinal &iChunkname, Cardinal 
	&iChunkseq, int &iExtra1, int &iExtra2, char * &zErrortext);
extern "C" int __stdcall mng_setcb_memalloc(void * hHandle, mng_memalloc fProc);
extern "C" int __stdcall mng_setcb_memfree(void * hHandle, mng_memfree fProc);
extern "C" int __stdcall mng_setcb_openstream(void * hHandle, mng_openstream fProc);
extern "C" int __stdcall mng_setcb_closestream(void * hHandle, mng_closestream fProc);
extern "C" int __stdcall mng_setcb_readdata(void * hHandle, mng_readdata fProc);
extern "C" int __stdcall mng_setcb_writedata(void * hHandle, mng_writedata fProc);
extern "C" int __stdcall mng_setcb_errorproc(void * hHandle, mng_errorproc fProc);
extern "C" int __stdcall mng_setcb_traceproc(void * hHandle, mng_traceproc fProc);