delphi/libmng.pas

unit libmng;

{****************************************************************************}
{ ************************************************************************** }
{ *                                                                        * }
{ * COPYRIGHT NOTICE:                                                      * }
{ *                                                                        * }
{ * Copyright (c) 2000 Gerard Juyn (gerard@libmng.com)                     * }
{ * [You may insert additional notices after this sentence if you modify   * }
{ *  this source]                                                          * }
{ *                                                                        * }
{ * For the purposes of this copyright and license, "Contributing Authors" * }
{ * is defined as the following set of individuals:                        * }
{ *                                                                        * }
{ *    Gerard Juyn                                                         * }
{ *    (hopefully some more to come...)                                    * }
{ *                                                                        * }
{ * The MNG Library is supplied "AS IS".  The Contributing Authors         * }
{ * disclaim all warranties, expressed or implied, including, without      * }
{ * limitation, the warranties of merchantability and of fitness for any   * }
{ * purpose.  The Contributing Authors assume no liability for direct,     * }
{ * indirect, incidental, special, exemplary, or consequential damages,    * }
{ * which may result from the use of the MNG Library, even if advised of   * }
{ * the possibility of such damage.                                        * }
{ *                                                                        * }
{ * Permission is hereby granted to use, copy, modify, and distribute this * }
{ * source code, or portions hereof, for any purpose, without fee, subject * }
{ * to the following restrictions:                                         * }
{ *                                                                        * }
{ * 1. The origin of this source code must not be misrepresented;          * }
{ *    you must not claim that you wrote the original software.            * }
{ *                                                                        * }
{ * 2. Altered versions must be plainly marked as such and must not be     * }
{ *    misrepresented as being the original source.                        * }
{ *                                                                        * }
{ * 3. This Copyright notice may not be removed or altered from any source * }
{ *    or altered source distribution.                                     * }
{ *                                                                        * }
{ * The Contributing Authors specifically permit, without fee, and         * }
{ * encourage the use of this source code as a component to supporting     * }
{ * the MNG and JNG file format in commercial products.  If you use this   * }
{ * source code in a product, acknowledgment would be highly appreciated.  * }
{ *                                                                        * }
{ ************************************************************************** }
{****************************************************************************}

interface

{****************************************************************************}

type mng_uint32  = cardinal;
     mng_int32   = integer;
     mng_uint16  = word;
     mng_int16   = smallint;
     mng_uint8   = byte;
     mng_int8    = shortint;
     mng_bool    = boolean;
     mng_ptr     = pointer;
     mng_pchar   = pchar;

     mng_handle  = mng_uint32;
     mng_retcode = mng_int32;
     mng_chunkid = mng_uint32;

     mng_imgtype = (it_unknown, it_png, it_jng, it_mng);

{****************************************************************************}

type mng_memalloc      = function  (    iLen         : mng_uint32) : mng_ptr; cdecl;
     mng_memfree       = procedure (    iPtr         : mng_ptr;
                                        iLen         : mng_uint32); cdecl;

type mng_openstream    = procedure (    hHandle      : mng_handle); cdecl;
type mng_closestream   = procedure (    hHandle      : mng_handle); cdecl;

type mng_readdata      = function  (    hHandle      : mng_handle;
                                        pBuf         : mng_ptr;
                                        iBuflen      : mng_uint32;
                                    var pRead        : mng_uint32) : mng_retcode; cdecl;

type mng_writedata     = function  (    hHandle      : mng_handle;
                                        pBuf         : mng_ptr;
                                        iBuflen      : mng_uint32;
                                    var pWritten     : mng_uint32) : mng_retcode; cdecl;

type mng_errorproc     = function  (    hHandle      : mng_handle;
                                        iErrorcode   : mng_retcode;
                                        iSeverity    : mng_uint8;
                                        iChunkname   : mng_chunkid;
                                        iChunkseq    : mng_uint32;
                                        iExtra1      : mng_int32;
                                        iExtra2      : mng_int32;
                                        zErrortext   : mng_pchar ) : mng_bool; cdecl;
type mng_traceproc     = procedure (    hHandle      : mng_handle;
                                        iFuncnr      : mng_int32;
                                        iFuncseq     : mng_uint32;
                                        zFuncname    : mng_pchar ); cdecl;

type mng_processheader = procedure (    hHandle      : mng_handle;
                                        iWidth       : mng_uint32;
                                        iHeight      : mng_uint32); cdecl;
type mng_processtext   = procedure (    hHandle      : mng_handle;
                                        iType        : mng_uint8;
                                        zKeyword     : mng_pchar;
                                        zText        : mng_pchar;
                                        zLanguage    : mng_pchar;
                                        zTranslation : mng_pchar ); cdecl;

type mng_getcanvasline = function  (    hHandle      : mng_handle;
                                        iLinenr      : mng_uint32) : mng_ptr; cdecl;
type mng_getbkgdline   = function  (    hHandle      : mng_handle;
                                        iLinenr      : mng_uint32) : mng_ptr; cdecl;
type mng_refresh       = procedure (    hHandle      : mng_handle;
                                        iTop         : mng_uint32;
                                        iLeft        : mng_uint32;
                                        iBottom      : mng_uint32;
                                        iRight       : mng_uint32); cdecl;

type mng_gettickcount  = function  (    hHandle      : mng_handle) : mng_uint32; cdecl;
type mng_settimer      = procedure (    hHandle      : mng_handle;
                                        iMsecs       : mng_uint32); cdecl;

type mng_processgamma  = procedure (    hHandle      : mng_handle;
                                        iGamma       : mng_uint32); cdecl;
type mng_processchroma = procedure (    hHandle      : mng_handle); cdecl;
type mng_processsrgb   = procedure (    hHandle      : mng_handle); cdecl;
type mng_processiccp   = procedure (    hHandle      : mng_handle); cdecl;
type mng_processarow   = procedure (    hHandle      : mng_handle;
                                        iRowsamples  : mng_uint32;
                                        bIsRGBA16    : mng_bool;
                                        pRow         : mng_ptr   ); cdecl;

{****************************************************************************}

function mng_initialize          (    iUserdata    : mng_int32;
                                      fMemalloc    : mng_memalloc;
                                      fMemfree     : mng_memfree;
                                      fTraceproc   : mng_traceproc    ) : mng_retcode;       cdecl;

function mng_reset               (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;

function mng_cleanup             (var hHandle      : mng_handle       ) : mng_retcode;       cdecl;

function mng_read                (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_write               (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_create              (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;

function mng_readdisplay         (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_display             (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_display_resume      (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_display_freeze      (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_display_reset       (    hHandle      : mng_handle       ) : mng_retcode;       cdecl;
function mng_display_goframe     (    hHandle      : mng_handle;
                                      iFramenr     : mng_uint32       ) : mng_retcode;       cdecl;
function mng_display_golayer     (    hHandle      : mng_handle;
                                      iLayernr     : mng_uint32       ) : mng_retcode;       cdecl;
function mng_display_gotime      (    hHandle      : mng_handle;
                                      iPlaytime    : mng_uint32       ) : mng_retcode;       cdecl;

function mng_getlasterror        (    hHandle      : mng_handle;
                                  var iSeverity    : mng_uint8;
                                  var iChunkname   : mng_chunkid;
                                  var iChunkseq    : mng_uint32;
                                  var iExtra1      : mng_int32;
                                  var iExtra2      : mng_int32;
                                  var zErrortext   : mng_pchar        ) : mng_retcode;       cdecl;

{****************************************************************************}

function mng_setcb_memalloc      (    hHandle      : mng_handle;
                                      fProc        : mng_memalloc     ) : mng_retcode;       cdecl;
function mng_setcb_memfree       (    hHandle      : mng_handle;
                                      fProc        : mng_memfree      ) : mng_retcode;       cdecl;

function mng_setcb_openstream    (    hHandle      : mng_handle;
                                      fProc        : mng_openstream   ) : mng_retcode;       cdecl;
function mng_setcb_closestream   (    hHandle      : mng_handle;
                                      fProc        : mng_closestream  ) : mng_retcode;       cdecl;

function mng_setcb_readdata      (    hHandle      : mng_handle;
                                      fProc        : mng_readdata     ) : mng_retcode;       cdecl;

function mng_setcb_writedata     (    hHandle      : mng_handle;
                                      fProc        : mng_writedata    ) : mng_retcode;       cdecl;

function mng_setcb_errorproc     (    hHandle      : mng_handle;
                                      fProc        : mng_errorproc    ) : mng_retcode;       cdecl;
function mng_setcb_traceproc     (    hHandle      : mng_handle;
                                      fProc        : mng_traceproc    ) : mng_retcode;       cdecl;
